2016-05-16
- added GPL version 2 with font exception version
- added LGPL version 3 with font exception version

2016-03-14
- added Māori to supported languages

2015-05-06
- added ЂЋћђ (Montenegrin, Serbian)
- increased right bearing of к

2015-05-04
- added ЎўІі (Belorussian)
- added Ӂӂ (Moldovian)
- added әҒғҚқҢңӨөҰұҺһ (Kazakh)
- added ЀѐЍѝЌќЃѓЏџЅѕЉљЊњ (Macedonian)
- added ЇїҐґЄє (Ukrainian)

2015-05-01
- cleaned up russian glyphs, added hints
- added Ḡḡ (100% Georgian romanization)
- added ʺʹ (100% Kazakh romanization)
- added Ŭŭ (100% Belarus romanization)
- added new editable sample page