@@ -65,7 +65,7 @@ div.added {
   <div class="subtitle">Latest version 2015-05-04</div>
 </div>
 <div class="added">
-Added ЎўІі (Belorussian), Ӂӂ (Moldovian), әҒғҚқҢңӨөҰұҺһ (Kazakh), ЀѐЍѝЌќЃѓЏџЅѕЉљЊњ (Macedonian), ЇїҐґЄє (Ukrainian)
+Added ЎўІі (Belarusian), Ӂӂ (Moldovian), әҒғҚқҢңӨөҰұҺһ (Kazakh), ЀѐЍѝЌќЃѓЏџЅѕЉљЊњ (Macedonian), ЇїҐґЄє (Ukrainian)
 </div>
 
 </body>
