@@ -53,7 +53,7 @@
     <nav>
         <select onchange="updatePreview(this.value)">
             <option value="">Choose sample text here</option>
-            <option value="Latin - ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz 0123456789">Latin glyphs</option>
+            <option value="Latin - ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz 0123456789 E-F-C-D-L-T-Y-Z-c-r-">Latin glyphs</option>
             <option value="Special - ()+-×÷*=≠[]{}!?&amp;&quot;'#$/:;\&lt;&gt;@~|%‰°±≤≥∞= 2m² 3m³ ··⋅ –— ¹⁰⁴⁵⁶⁷⁸⁹⁺⁻⁼⁽⁾ ≠≈≡½¼¾№¶">Special glyphs</option>
             <option value="CAD symbols - ℄↔↗↧∠⌀⌒⌓⌖⌭⌯⌰⌳⌲⌴⌵⍵⏊⏤⏥ⒺⒻⓁⓂⓅⓈⓉⓊ□○◎⫽">CAD symbols</option>
             <option value="Kerning is [Ȩȩ], ligatures are [Ȼȼ] (on=working, no=not working).">Kerning and ligatures test</option>
@@ -61,7 +61,7 @@
                 <option value="Afrikaans - Sê ek moet sy zebra en xilofoon in bring, want môre gaan dit reën (ÁáÉéÈèÊêËëÍíÎîÏÓóÔôÚúÛûÝý)">Afrikaans</option>
                 <option value="Albanian - Veçori tipologjike të shqipes së sotme standarde (ÇçËë)">Albanian</option>
                 <option value="Azerbaijani - AaBbCcÇçDdEeƏəFfGgĞğHhXxIıİiJjKkQqLlMmNnOoÖöPpRrSsŞşTtUuÜüVvYyYAyaYEyeEeYOyoYUyuZz (ƏəƢƣЬьƵƶӘI̡ı̡ƟɵЗзЈАјаN̡n̡)">Azerbaijani</option>
-                <option value="Belorussian - Я магу есці шкло, яно мне не шкодзіць (АаБбВвГгДдЕеЁёЖжЗзІіЙйКкЛлМмНнОоПпРрСсТтУуЎўФфХхЦцЧчШшЫыЬьЭэЮюЯя’)">Belorussian</option>
+                <option value="Belarusian - Я магу есці шкло, яно мне не шкодзіць (АаБбВвГгДдЕеЁёЖжЗзІіЙйКкЛлМмНнОоПпРрСсТтУуЎўФфХхЦцЧчШшЫыЬьЭэЮюЯя’)">Belarusian</option>
                 <option value="Bosnian - Moja lebdjelica je puna jegulja (ĆćČčĐđŠšŽžÁáÝýİıŞş)">Bosnian</option>
                 <option value="Bulgarian - За миг бях в чужд плюшен скърцащ фотьойл (АаБбВвГгДдЕеЖжЗзИиЙйКкЛлМмНнОоПпРрСсТтУуФфХхЦцЧчШшЩщЪъЬьЮюЯя)">Bulgarian</option>
                 <option value="Catalan - Jove xef, porti whisky amb quinze glaçons d'hidrogen, coi! (ÇçÜüÏïÉéÍíÓóÚúÀàÈèÒò)">Catalan</option>
