@@ -1,3 +1,7 @@
+2018-09-07
+- fixed kerning in E-F-C-D-L-T-Y-Z-c-r-
+- fixed typo in Belarusian
+
 2016-05-16
 - added GPL version 2 with font exception version
 - added LGPL version 3 with font exception version
@@ -10,7 +14,7 @@
 - increased right bearing of к
 
 2015-05-04
-- added ЎўІі (Belorussian)
+- added ЎўІі (Belarusian)
 - added Ӂӂ (Moldovian)
 - added әҒғҚқҢңӨөҰұҺһ (Kazakh)
 - added ЀѐЍѝЌќЃѓЏџЅѕЉљЊњ (Macedonian)
